refactoring code and creating Intellij files